JCR-473 Some enhancements to jackrabbit commons (fixed some deprecated calls)
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@421198 13f79535-47bb-0310-9956-ffa450edef68